added comment tags to HTML, JS, and CSS files. Organized and revised the user instructions on the index file.

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,6 @@
-.container {
+/* custom id to organize user input into a column */
+#user-input {
     display: flex;
-    flex-direction: column; /* Align items vertically */
-    align-items: center; /* Center horizontally */
-    height: 100vh; /* Make the container fill the entire viewport height */
-    justify-content: center; /* Center vertically */
-}
- 
-label {
-    margin-bottom: 10px; /* Add spacing between label and input */
+    flex-direction: column;
+    align-items: center;
 }
